kicsikocsi/Design01.cydsn/REBUILD.log
--------------- Rebuild Started: 05/15/2023 19:50:34 Project: Design01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\IRL.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Reg_PWM_Enable.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Reg_PWM_Enable_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\IRR.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Left_Motor_PWM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Left_Motor_PWM_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Right_Motor_PWM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Right_Motor_PWM_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock_2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Right_Motor_DIR.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Left_Motor_DIR.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Left_Motor_Control.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Right_Motor_Control.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\BTN.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Design01.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Design01.map"
Deleting file ".\Design01.cycdx"
Deleting file ".\Design01.svd"
Deleting file ".\Design01.rpt"
Deleting file ".\Design01_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\budai\AppData\Local\Cypress Semiconductor\PSoC Creator\4.2" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\budai\Documents\github\Beagyazott_rendszerek\kicsikocsi\Design01.cydsn\Design01.cyprj -d CY8C5868AXI-LP035 -s C:\Users\budai\Documents\github\Beagyazott_rendszerek\kicsikocsi\Design01.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'execute':
main.c:180:5: warning: 'main' is normally a non-static function [-Wmain]
 int main(void)
     ^
main.c:233:5: error: expected declaration or statement at end of input
     };
     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/15/2023 19:50:39 ---------------
